# popnas

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG-v1-to-v2.md  CHANGELOG-v2-to-v3.md  CHANGELOG-v3-to-v4.md  CHANGELOG.md  Dockerfile  LICENSE  NOTICE  README.md  controller.py  encoder.py  log_service.py  manager.py  model.py  ops.py  pyproject.toml  requirements.txt  run.py  train.py
.github/workflows/: docker-image.yml
docker/: Dockerfile  Dockerfile-rocm
server/: app.py  tensorboard_p.py
src/: .dockerignore  benchmarking.py  best_model.py  cell_pruning.py  config_schema.json  controller.py  cvt.py  encoder.py  exploration.py  file_writer.py  log_service.py  manager.py  manager_bench_proxy.py  model.py  ops.py  plotter.py  popnas.py  requirements-rocm.txt  requirements.txt  run.py  run_bench.py  run_e2e.py  run_e2e_tsc_archives.py  search_space.py  search_space_units.py  train.py
src/aMLLibrary/: requirements.txt  sequence_data_processing.py
src/aMLLibrary/example_configurations/: agora_blueprint.ini
src/aMLLibrary/inputs/: coliva_j10_ML_input.csv
src/autoencoders/: conv1D.py  lstm.py
src/configs/: amllibrary.ini  amllibrary_inference.ini  final_training.json  last_training.json  model_selection_training.json  regressors.ini  regressors_hyperopt.ini  run.json  run_debug.json  run_seg.json  run_ts.json
src/dataset/: augmentation.py  generator.py  utils.py
src/dataset/generators/: __init__.py  base.py  factory.py  image_classification.py  image_segmentation.py  time_series_classification.py
src/dataset/preprocessing/: __init__.py  data_preprocessor.py  image_preprocessor.py  time_series_preprocessor.py
src/dataset/transformations/: augmentation.py  model_embedded_preprocessing.py  (+1 more)
src/datasets/: augmentation.py  generator.py  utils.py
src/models/: model_generator.py  op_instantiator.py  optimizers.py
src/predictors/: __init__.py  amllibrary_predictor.py  catboost_predictor.py  conv1d1i_predictor.py  conv1d_predictor.py  gcn_predictor.py  gcn_predictor_custom.py  gcn_predictor_dgl.py  gcn_predictor_spektral.py  gin_predictor.py  gru_predictor.py  initializer.py  keras_predictor.py  lgbm_predictor.py  lstm_attention_predictor.py  lstm_predictor.py  nn_predictor.py  predictor.py  rnn_attention_predictor.py  rnn_predictor.py  spektral_predictor.py
src/scripts/: README.md  __init__.py  best_model.py  check_segmentation_inference_results.py  compute_inference_time.py  compute_segmentation_inference_time.py  controller_testing.py  convert_segmentation_masks.py  create_popnas_segmentation_dataset.py  evaluate_bench_network.py  evaluate_network.py  final_training.py  get_additional_info.py  last_training.py  make_new_dataset.py  make_new_dataset_2.py  make_new_time_dataset.py  model_selection_top_k.py  model_selection_training.py  plot_slideshow.py  predictors_acc_testing.py  predictors_time_inf_testing.py  predictors_time_testing.py  prepare_tiny_imagenet.py  prepare_tsc_archive_data.py  read_onnx.py  regressor_testing.py  regressor_testing_v2.py  results_analysis.py  save_cell_graph_image.py  top_k_final_training.py
src/server/: app.py  custom_logger.py  requester.py  subprocesses.py  utils.py
src/utils/: catboost_eval_metric_spearman.py  cell_counter.py  cell_pruning.py  config_dataclasses.py  config_utils.py  config_validator.py  dataset_utils.py  experiments_summary.py  feature_analysis.py  feature_utils.py  final_training_utils.py  func_utils.py  graph_generator.py  legacy_cell_pruning.py  legacy_feature_utils.py  model_estimate.py  network_graph.py  nn_utils.py  plot_slideshow.py  plotter_utils.py  post_search_training_utils.py  restore.py  rstr.py  stream_to_logger.py  tensor_utils.py  timing_callback.py  tsc_utils.py
tests/: test_config_dataclasses.py  test_network_graphs.py  test_optimizer_instantiator.py
(+63 files in other folders)
