[tool.poetry]
name = "popnas"
version = "0.1.0"
description = "POPNAS algorithm"
authors = ["AndreaFalanti <a.falanti@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
# 3.6.9 is standard for tensorflow docker images and linux,
# 3.7.4 is good for windows (3.7 is retrocompatible with 3.6)
python = ">=3.6.9, 3.7.4"
sklearn = "0.0"
tensorflow = "2.6.0rc0"
pandas = "1.1.5"
tqdm = "4.62.0"
matplotlib = "3.3.4"
mypy = "0.910"
catboost = "0.26.1"
pydot = "1.4.2"
numba = "0.53.1"
psutil = "5.8.0"
shap = "0.40.0"
seaborn = "0.11.2"
# aMLLibrary only
xgboost = "1.4.2"
mlxtend = "0.18.0"
hyperopt = "0.2.5"
eli5 = "0.11.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pylint = "^2.9.6"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 150
in-place = true
recursive = false