[tool.poetry]
name = "popnas"
version = "3.3.0"
description = "POPNAS algorithm"
authors = ["AndreaFalanti <a.falanti@gmail.com>"]
license = "Apache-2.0"
keywords = ["autoML", "NAS", "neural architecture search", "machine learning", "deep learning", "tensorflow"]

[tool.poetry.dependencies]
python = ">=3.8.0, <3.11.0"
tensorflow = "2.8.4"
scikit-learn = "1.2.0"
pandas = "1.5.2"
tqdm = "4.64.1"
matplotlib = "3.6.3"
mypy = "0.991"
catboost = "1.1.1"
pydot = "1.4.2"
numba = "0.56.4"
psutil = "5.9.4"
seaborn = "0.12.2"
tf2onnx = "1.13.0"
keras-tuner = "1.1.0"
tensorflow-addons = {extras = ["tensorflow"], version = "0.18.0"}
tensorflow-datasets = "4.8.1"
tensorflow-probability = "0.16.0"
igraph = "0.10.3"
shap = "0.41.0"
lightgbm = "3.3.2"
optuna = "2.10.1"
sktime = "0.15.1"
jsonschema = "4.17.3"
einops = "0.6.0"
nats-bench = "1.7"
spektral = "1.2.0"
onnxruntime = "1.13.1"
graphviz = "0.20.1"
# fix scipy dependency issue caused by statsmodels (https://github.com/statsmodels/statsmodels/issues/8543),
# by fixing a "working" version to this indirect dependency. Remove when solved.
statsmodels = "0.13.2"
# aMLLibrary extra dependencies
xgboost = "1.6.1"
mlxtend = "0.19.0"
eli5 = "0.13.0"
py4j = "0.10.9.5"
future = "0.18.2"

[tool.poetry.dev-dependencies]
autopep8 = "2.0.0"
pylint = "2.15.10"
flake8 = "5.0.4"

[tool.poetry.group.server.dependencies]
flask = "2.2.2"
flask-restful = "^0.3.9"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 150
in-place = true
recursive = false